<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceScreen
		android:key="status_bar_frag"
     	android:title="System Settngs"
     	android:summary="System Settings Fagment"
     	android:defaultValue="false" />
	
    <CheckBoxPreference
  		android:key="status_bar_change_clock_to_red"
     	android:title="@string/status_bar_change_clock_to_red_title"
     	android:summary="@string/status_bar_change_clock_to_red_summary"
     	android:defaultValue="false" />
	
	<SwitchPreference
  		android:key="status_bar_change_clock_to_red"
     	android:title="@string/status_bar_change_clock_to_red_title"
     	android:summary="@string/status_bar_change_clock_to_red_summary"
     	android:defaultValue="false" />

    <ListPreference
  		android:key="status_bar_change_battery_icons"
     	android:title="@string/status_bar_change_battery_icons_title"
     	android:summary="@string/status_bar_change_battery_icons_summary"
     	android:entries="@array/status_bar_change_battery_icons_entries"
	    android:entryValues="@array/status_bar_change_battery_icons_entries_values"
	    android:defaultValue="0" />

</PreferenceScreen>
